--- a/templates/website/lead_list.html
+++ b/templates/website/lead_list.html
@@ -5,7 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-    <h1> Hi there</h1>
+    <h1> This is all of our leads</h1>
     <p> Here is our custom html template</p>
+    <ul>
+        {% for lead in leads %}
+        <li>{{ lead }}</li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
