--- a/templates/website/lead_detail.html
+++ b/templates/website/lead_detail.html
@@ -18,5 +18,6 @@
     <hr/>
     <h1> This is the details of {{ lead.first_name }} </h1>
     <p> These persons age: {{ lead.age  }}</p>
+    <p> The agent responsible for this lead is: {{ lead.agent }}</p>
 </body>
 </html>
