--- a/templates/website/lead_list.html
+++ b/templates/website/lead_list.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+    <a href="/website/create/">Create a new lead</a>
+    <hr />
     <h1> This is all of our leads</h1>
     {% for lead in leads %}
         <div class="lead">
