--- a/templates/website/lead_create.html
+++ b/templates/website/lead_create.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <a href="/website"> Return to leads</a>
+    <a href="{% url 'website:lead-list' %}"> Return to leads</a>
     <hr/>
     <h1> Create a new lead </h1>
     <form method="post">
