--- a/templates/website/lead_detail.html
+++ b/templates/website/lead_detail.html
@@ -14,10 +14,14 @@
 </head>
 
 <body>
-    <a href="/website"> Return to leads</a>
+    <a href="{% url 'website:lead-list' %}"> Return to leads</a>
     <hr/>
     <h1> This is the details of {{ lead.first_name }} </h1>
     <p> These persons age: {{ lead.age  }}</p>
     <p> The agent responsible for this lead is: {{ lead.agent }}</p>
+    <hr />
+    <a href="{% url 'website:lead-update' lead.pk %}">Update</a>
+    <a href="{% url 'website:lead-delete' lead.pk %}">Delete</a>
+
 </body>
 </html>
