--- a/templates/website/lead_list.html
+++ b/templates/website/lead_list.html
@@ -14,12 +14,12 @@
 </head>
 
 <body>
-    <a href="/website/create/">Create a new lead</a>
+    <a href="{% url 'website:lead-create' %}">Create a new lead</a>
     <hr />
     <h1> This is all of our leads</h1>
     {% for lead in leads %}
         <div class="lead">
-            <a href="/website/{{ lead.pk }}/">{{ lead.first_name }} {{ lead.last_name }}</a>. Age: {{ lead.age }}
+            <a href="{% url 'website:lead-detail' lead.pk %}">{{ lead.first_name }} {{ lead.last_name }}</a>. Age: {{ lead.age }}
         </div>
     {% endfor %}
 </body>
