--- a/templates/website/lead_create.html
+++ b/templates/website/lead_create.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
+
     <a href="{% url 'website:lead-list' %}"> Return to leads</a>
     <hr/>
     <h1> Create a new lead </h1>
@@ -13,5 +10,5 @@
         {{ form }}
         <button type="submit">Submit</button>
     </form>
-</body>
-</html>
+
+{% endblock content %}
