--- a/templates/website/lead_list.html
+++ b/templates/website/lead_list.html
@@ -1,20 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <style>
-        .lead {
-            padding: 10px 6px;
-            margin-top: 10px;
-            background-color: #f6f6f6;
-            width: 100%;
-        }
-    </style>
-</head>
+{% extends "base.html" %}
+{% block content %}
 
-<body>
-    <a href="{% url 'website:lead-create' %}">Create a new lead</a>
+<a href="{% url 'website:lead-create' %}">Create a new lead</a>
     <hr />
     <h1> This is all of our leads</h1>
     {% for lead in leads %}
@@ -22,5 +9,4 @@
             <a href="{% url 'website:lead-detail' lead.pk %}">{{ lead.first_name }} {{ lead.last_name }}</a>. Age: {{ lead.age }}
         </div>
     {% endfor %}
-</body>
-</html>
+{% endblock content %}
