--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,7 @@
 
 #logout-form button {
     padding: 0;
-    color: #fff;
+    color: rgba(255, 255, 255, 0.5);
     background: none;
     border: 0;
     cursor: pointer;
