--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,9 +13,11 @@
                     Sign Up
                 </a>
             {% else %}
-                <a href="{% url "agents:agent-list" %}" class="mr-5 hover:text-gray-900">
-                    Agent
-                </a>
+                {% if request.user.is_organiser %}
+                    <a href="{% url "agents:agent-list" %}" class="mr-5 hover:text-gray-900">
+                        Agent
+                    </a>
+                {% endif %}
                 <a href="{% url "website:lead-list" %}" class="mr-5 hover:text-gray-900">
                     Leads
                 </a>
@@ -23,13 +25,11 @@
         </nav>
         {% if request.user.is_authenticated %}
             Logged in as: {{ request.user.username }}
-                <form class="ml-3" id="logout-form" action="{% url "logout" %}" method="POST">
-                  {% csrf_token %}
-                  <button type="submit">Log out
-                <!--<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-                <path d="M5 12h14M12 5l7 7-7 7"></path>
-                </svg>-->
-                  </button>
+                <form class="ml-3 hover:text-gray-900"  id="logout-form" action="{% url "logout" %}" method="POST">
+                    {% csrf_token %}
+                    <button class="ml-3 hover:text-gray-900" type="submit">
+                        Log out
+                    </button>
                 </form>
         {% else %}
         <a href="{% url 'login' %}" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
