--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="csrf_token" content="{{ csrf_token }}">
     <meta name="viewport" content="width=device-width, initial-scale = 1.0">
     <title>DJCRM</title>
     <link href="{% static 'css/style.css' %}" rel="stylesheet"/>
