--- a/templates/website/lead_category_update.html
+++ b/templates/website/lead_category_update.html
@@ -12,10 +12,10 @@
                     <a href="{% url 'website:lead-detail' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">
                       Overview
                     </a>
-                    <a href="{% url 'website:lead-category-update' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">
+                    <a class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1">
                       Category
                     </a>
-                    <a href="{% url 'website:lead-update' lead.pk %}" class="flex-grow text-indigo-500 border-b-2 border-indigo-500 py-2 text-lg px-1">
+                    <a href="{% url 'website:lead-update' lead.pk %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">
                       Update Details
                     </a>
                 </div>
