--- a/templates/website/lead_list.html
+++ b/templates/website/lead_list.html
@@ -6,6 +6,8 @@
     <div class="w-full mb-6 py-6 flex justify-between items-center border-b border-gray-200">
         <div>
           <h1 class=" text-4xl text-gray-800"> Leads</h1>
+            <a class="text-gray-500 hover:text-blue-500" href="{% url 'website:category-list' %}">
+                View categories
         </div>
             {% if request.user.is_organiser %}
                 <div>
