--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,13 +1,22 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }} <!-- Making form as paraghraph -->
-    <button type="submit">Login</button>
-    <hr>
-    <a href="{% url 'reset-password' %}" >Forget password?</a>
-</form>
+<div class="max-w-lg mx-auto">
+
+    <div class="py-5 border-b border-gray-300">
+        <a class="hover:text-blue-500 mt-3" href="{% url 'signup' %}" >Don't have an account?</a>
+    </div>
+
+    <form method="post" class="mt-5">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button type="submit" class="text-white w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md">Login</button>
+    </form>
+    <div class="py-5 border-t border-gray-300 mt-5">
+        <a class="hover:text-blue-500 mt-3" href="{% url 'reset-password' %}" >Forget password?</a>
+    </div>
+</div>
 
 {% endblock content %}
