--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,15 +1,17 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
 
-    <h1>Enter your new password</h1>
+    <h1 class="text-4xl text-gray-800">Enter your new password</h1>
 
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }} <!-- Making form as paraghraph -->
-        <button type="submit">Confirm new password</button>
-        <hr>
-        <a href="{% url 'login' %}" >Already have an account?</a>
-    </form>
+    <div class="max-w-lg mx-auto">
+        <form method="post">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="text-white w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md">Confirm new password</button>
+            <a href="{% url 'login' %}" >Already have an account?</a>
+        </form>
+    </div>
 
 {% endblock content %}
