Continuing styling website

--- a/templates/website/assign_agent.html
+++ b/templates/website/assign_agent.html
@@ -1,14 +1,20 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
 
+<div class="max-w-lg mx-auto">
     <a href="{% url 'website:lead-list' %}"> Return to leads</a>
-    <hr/>
-    <h1> Assign an agent </h1>
-    <form method="post">
+    <div class="py-5 border-t border-gray-200">
+        <h1> Assign an agent </h1>
+    </div>
+    <form method="post"  class="mt-5">
         {% csrf_token %}
-        {{ form }}
-        <button type="submit">Submit</button>
+        {{ form|crispy }}
+        <button type="submit" class="text-white w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md">
+            Submit
+        </button>
     </form>
+</div>
 
 {% endblock content %}
