--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -25,12 +25,12 @@
         </nav>
         {% if request.user.is_authenticated %}
             Logged in as: {{ request.user.username }}
-                <form class="ml-3 hover:text-gray-900"  id="logout-form" action="{% url "logout" %}" method="POST">
-                    {% csrf_token %}
-                    <button type="submit" class="ml-3 hover:text-gray-900">
-                        Log out
-                    </button>
-                </form>
+            <a href="{% url 'logout' %}" class="ml-3 inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">
+                Log out
+                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+                    <path d="M5 12h14M12 5l7 7-7 7"></path>
+                </svg>
+            </a>
         {% else %}
         <a href="{% url 'login' %}" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
             Login
