--- a/templates/website/lead_delete.html
+++ b/templates/website/lead_delete.html
@@ -1,14 +1,20 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
 
-    <a href="{% url 'website:lead-list' %}"> Return to leads</a>
-    <hr/>
-    <h1> Are You sure You want to delete this lead? </h1>
-    <form method="post">
+<div class="max-w-lg mx-auto">
+    <div class="py-5 border-t border-gray-200">
+        <a class="hover:text-blue-800" href="{% url 'website:lead-list' %}"> Return to leads</a>
+    </div>
+    <h1 class="text-3xl text-gray-800"> Are You sure You want to delete this lead? </h1>
+    <form method="post" class="mt-5">
         {% csrf_token %}
-        {{ form }}
-        <button type="submit">Submit</button>
+        {{ form|crispy }}
+        <button type="submit" class="text-white w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md">
+            Submit
+        </button>
     </form>
+</div>
 
 {% endblock content %}
