--- a/templates/website/lead_update.html
+++ b/templates/website/lead_update.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load tailwind_filters %}
 
 {% block content %}
 
@@ -21,27 +22,20 @@
                 </div>
                 <form method="post">
                     {% csrf_token %}
-                    {{ form }}
-                    <button type="submit">Submit</button>
+                    {{ form|crispy }}
+                    <button type="submit" class="text-white w-full bg-blue-500 hover:bg-blue-600 px-3 py-2 rounded-md">
+                        Submit
+                    </button>
                 </form>
-
-                 <a href="{% url 'website:lead-delete' lead.pk %}" class="w-1/2 mt-3 flex ml-auto text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">
-                     Delete
-                 </a>
-
+                    <div class="mt-5 py-5 border-t border-gray-200">
+                        <a href="{% url 'website:lead-delete' lead.pk %}" class="w-1/2 mt-3 text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">
+                             Delete
+                        </a>
+                    </div>
                 </div>
             </div>
           <img alt="ecommerce" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="https://dummyimage.com/400x400">
         </div>
     </section>
-
-    <a href="{% url 'website:lead-detail' lead.pk %}"> Return to {{ lead.first_name }} {{ lead.last_name }}</a>
-    <hr/>
-    <h1> Update lead: {{ lead.first_name }} {{ lead.last_name }} </h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form }}
-        <button type="submit">Submit</button>
-    </form>
 
 {% endblock content %}
