Continuing styling website

--- a/templates/agents/agent_detail.html
+++ b/templates/agents/agent_detail.html
@@ -37,14 +37,14 @@
     </div>
   </div>
 </section>
-
+<!--
     <a href="{% url 'agents:agent-list' %}"> Return to agents</a>
     <hr/>
-<!--    <h1> This is the details of {{ lead.first_name }} </h1>
-    <p> These persons age: {{ lead.age  }}</p> -->
+   <h1> This is the details of {{ lead.first_name }} </h1>
+    <p> These persons age: {{ lead.age  }}</p>
     <p> The agent responsible for this lead is: {{ agent.user.username}}</p>
     <hr />
     <a href="{% url 'agents:agent-update' agent.pk %}">Update</a>
     <a href="#">Delete</a>
-    <a href="{% url 'agents:agent-delete' agent.pk %}">Delete</a>
+    <a href="{% url 'agents:agent-delete' agent.pk %}">Delete</a>-->
 {% endblock content %}
