--- a/templates/website/lead_detail.html
+++ b/templates/website/lead_detail.html
@@ -24,12 +24,12 @@
           <span class="ml-auto text-gray-900">{{ lead.age }}</span>
         </div>
         <div class="flex border-t border-gray-200 py-2">
-          <span class="text-gray-500">Location</span>
-          <span class="ml-auto text-gray-900">Dummy location</span>
+          <span class="text-gray-500">Email</span>
+          <span class="ml-auto text-gray-900">{{ lead.email }}</span>
         </div>
         <div class="flex border-t border-b mb-6 border-gray-200 py-2">
-          <span class="text-gray-500">Cell phone</span>
-          <span class="ml-auto text-gray-900">+42434234234246</span>
+          <span class="text-gray-500">Phone Number</span>
+          <span class="ml-auto text-gray-900">{{ lead.phone_number }}</span>
         </div>
 
       </div>
@@ -37,14 +37,5 @@
     </div>
   </div>
 </section>
-
-    <a href="{% url 'website:lead-list' %}"> Return to leads</a>
-    <hr/>
-    <h1> This is the details of {{ lead.first_name }} </h1>
-    <p> These persons age: {{ lead.age  }}</p>
-    <p> The agent responsible for this lead is: {{ lead.agent }}</p>
-    <hr />
-    <a href="{% url 'website:lead-update' lead.pk %}">Update</a>
-    <a href="{% url 'website:lead-delete' lead.pk %}">Delete</a>
 
 {% endblock content %}
