Fix the problem with launching server

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% load static %}
+
 {% block content %}
 <section class="text-gray-600 body-font">
   <div class="container mx-auto flex px-5 py-24 justify-center flex-col items-center">
